# online-cinema-api

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose-prod.yml  docker-compose-tests.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: cd-workflow.yml  ci-workflow.yml
alembic/migrations/: env.py
commands/: deploy.sh  run_migration.sh  run_web_server_dev.sh  run_web_server_prod.sh  set_nginx_basic_auth.sh  setup_minio.sh
configs/nginx/: default.conf
docker-entrypoint-initdb.d/: init.sql
docker/minio_mc/: Dockerfile
docker/nginx/: .env.sample  Dockerfile
docker/tests/: Dockerfile
docs/: development.md
src/: config.py  database.py  main.py
src/admin/: auth.py  setup.py  views.py
src/api/: __init__.py  dependencies.py  exceptions.py
src/core/: celery.py  config.py  database.py  tasks.py
src/exceptions/: auth.py  carts.py  movies.py  notifications.py  orders.py
src/models/: __init__.py  carts.py  movies.py  notifications.py  orders.py  payments.py  tokens.py  users.py
src/repositories/: carts.py  movies.py  notifications.py  orders.py  payments.py  tokens.py  users.py
src/schemas/: admin_movies.py  carts.py  movies.py  notifications.py  orders.py  payments.py  tokens.py  users.py
src/security/: jwt_tokens.py  passwords.py
src/services/: carts.py  email.py  exceptions.py  jwt_tokens.py  movies.py  notification_templates.py  notifications.py  orders.py  storage.py  tokens.py  users.py
src/tasks/: send_email.py  tokens.py
src/tests/: conftest.py  (+7 more)
(+15 files in other folders)
