[project]
name = "online-cinema-api"
version = "0.1.0"
description = ""
authors = [
    {name = "zwirok-git",email = "oleksijprokopenko@gmail.com"}
]
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "pyjwt>=2.13.0",
    "pwdlib[argon2]>=0.3.0",
    "mypy>=2.1.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.uv]
package = false


[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "mypy>=2.1.0",
]


[tool.ruff]
extend-exclude = ["**migrations", "tests",]
line-length = 79


[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "SIM",
    "I"
]


[tool.ruff.lint.mccabe]
max-complexity = 18


[tool.ruff.lint.isort]
lines-after-imports = 2


[tool.mypy]
python_version = "3.13"
warn_return_any = true
mypy_path = "src"